index.ts: changed name of STAGE_NAMES_COOKIE, Pages.css: updated rule-sets so that left-sided labels align, priceEntry.tsx: introduced span for left-sided labels to enable correct styling, priceEntry.ts: added interface for FaresTriangleItem

--- a/repos/fdbt-site/src/design/Pages.scss
+++ b/repos/fdbt-site/src/design/Pages.scss
@@ -5,37 +5,71 @@
     line-height: 35px;
 }
 
-.fare-triangle {
-    padding-bottom: 40px;
+.fare-triangle-container {
+    display: flex;
 
-    .fare-triangle-row {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        align-items: flex-start;
-        align-content: flex-start;
+    .fare-triangle-column {
+        .fare-triangle-label-left {
+            display: flex;
+            height: 40px;
+            margin: 0;
+            flex: 0 0 auto;
+            width: 80px;
+            white-space: nowrap;
+
+            span {
+                margin: auto 0;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                background: #fff;
+                padding: 6px;
+            }
+
+            span:hover {
+                overflow: visible;
+                z-index: 1;
+            }
+        }
     }
 
-    .fare-triangle-row:not(:last-child) .fare-triangle-input {
-        border-bottom: none;
-    }
+    .fare-triangle {
+        overflow-x: auto;
+        margin-bottom: 40px;
 
-    .fare-triangle-input:not(:first-child) {
-        border-left: none;
-    }
+        .fare-triangle-row {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+            align-items: flex-start;
+            align-content: flex-start;
+        }
 
-    .fare-triangle-label {
-        margin: auto 0;
-        width: 80px;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        padding: 7px;
-    }
+        .fare-triangle-row:not(:last-child) .fare-triangle-input {
+            border-bottom: none;
+        }
 
-    .fare-triangle-label:hover {
-        overflow: visible;
+        .fare-triangle-input {
+            flex: 0 0 auto;
+        }
+
+        .fare-triangle-input:not(:nth-child(1)) {
+            border-left: none;
+        }
+
+        .fare-triangle-label-right {
+            flex: 0 0 auto;
+            margin: auto 0;
+            width: 110px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            padding: 7px;
+        }
+
+        .fare-triangle-label-right:hover {
+            overflow: visible;
+        }
     }
 }
 
